# feldspar-signal

./: LICENSE  README.md  feldspar-signal.cabal
src/Feldspar/: Signal.hs
