name:                feldspar-signal
version:             0.1
synopsis:            Signal Processing extension for Feldspar
-- description:
homepage:            https://github.com/markus-git/feldspar-signal
license:             BSD3
license-file:        LICENSE
author:              Markus Aronsson, Emil Axelsson
maintainer:          mararon@chalmers.se
copyright:           Copyright 2015 Markus Aronsson, Emil Axelsson
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:

  default-language: Haskell2010

  default-extensions:

  other-extensions:

  build-depends:
    base >=4.7 && <4.8

  hs-source-dirs: src
