name:                feldspar-signal
version:             0.0.1.0
synopsis:            Signal Processing extension for Feldspar
-- description:
homepage:            https://github.com/markus-git/feldspar-signal
license:             BSD3
license-file:        LICENSE
author:              Markus Aronsson, Emil Axelsson
maintainer:          mararon@chalmers.se
copyright:           Copyright 2015 Markus Aronsson, Emil Axelsson
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Feldspar.Signal
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base            >= 4.7 && < 5,
                       mainland-pretty >= 0.2.7 && < 0.3,
                       base-compat     < 0.8,

                       imperative-edsl,
                       monadic-edsl-priv,

                       feldspar-language,
                       feldspar-compiler,
                       feldspar-compiler-shim
                       
  hs-source-dirs:      src
  default-language:    Haskell2010
